lesson7/css/load.css
:root {
  --cool-grey: #808cb0ff;
  --almond: #f2e2d2ff;
  --oxford-blue: #091540ff;
  --persian-blue: #1b2cc1ff;
  --rifle-green: #45462aff;
	}
h1{
	text-align: center;
	align-self: center;
}
.photos {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-gap: 10px;
  grid-auto-rows: minmax(300px, auto);

}
.photos img{
  opacity: 0;
	transition: .8s opacity;
}
.photos img.visible{
  opacity: 1;
}


footer {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin: 0 auto;
	padding: 10px 10px;
	font-size: .9em;
	color: var(--almond);
	line-height: 1.5em;
	background-color:  var(--rifle-green);
}

footer a, footer a:visited {
	color: var(--rifle-green);
	text-decoration: none;
}

footer a:hover {
	text-decoration: underline;
}

